--- a/index.html
+++ b/index.html
@@ -114,45 +114,60 @@
 
     <!-- Footer -->
     <footer>
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-column">
-                    <h3>IZAplantas</h3>
-                    <p>Transformando ambientes com a beleza da natureza</p>
-                    <div class="social-links">
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-pinterest"></i></a>
-                        <a href="#"><i class="fab fa-whatsapp"></i></a>
-                    </div>
-                </div>
-                <div class="footer-column">
-                    <h3>Links Rápidos</h3>
-                    <ul>
-                        <li><a href="index.html">Início</a></li>
-                        <li><a href="plantas.html">Plantas</a></li>
-                        <li><a href="vasos.html">Vasos</a></li>
-                        <li><a href="acessorios.html">Acessórios</a></li>
-                        <li><a href="decoracao.html">Decoração</a></li>
-                    </ul>
-                </div>
-                <div class="footer-column">
-                    <h3>Contato</h3>
-                    <ul>
-                        <li>Rua das Flores, 123</li>
-                        <li>São Paulo - SP</li>
-                        <li>contato@izaplantas.com.br</li>
-                        <li>(11) 3456-7890</li>
-                        <li>Segunda a Sábado: 8h às 18h</li>
-                    </ul>
+    <div class="container">
+        <div class="footer-content">
+            <div class="footer-column">
+                <h3>IZAplantas</h3>
+                <p>Transformando ambientes com a beleza da natureza</p>
+                <div class="social-links">
+                    <a href="https://www.instagram.com/jardin.iza?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="https://wa.me/5573999535407" target="_blank">
+                        <i class="fab fa-whatsapp"></i>
+                    </a>
+                    <a href="https://maps.app.goo.gl/drtwyCgQq4GimYsn8" target="_blank">
+                        <i class="fas fa-map-marker-alt"></i>
+                    </a>
                 </div>
             </div>
-            <div class="copyright">
-                <p>&copy; 2023 IZAplantas - Todos os direitos reservados</p>
+            <div class="footer-column">
+                <h3>Links Rápidos</h3>
+                <ul>
+                    <li><a href="index.html">Início</a></li>
+                    <li><a href="plantas.html">Plantas</a></li>
+                    <li><a href="vasos.html">Vasos</a></li>
+                    <li><a href="acessorios.html">Acessórios</a></li>
+                    <li><a href="decoracao.html">Decoração</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h3>Horário de Funcionamento</h3>
+                <ul>
+                    <li>Segunda a Sexta: 8h às 17h</li>
+                    <li>Sábado: 8h às 12h</li>
+                    <li>Domingo: Fechado</li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h3>Localização</h3>
+                <ul>
+                    <li><i class="fas fa-map-marker-alt"></i> Vila Marambaia KM6</li>
+                    <li>CEP: 45530-000</li>
+                    <li>Atrás do Posto da Polícia Rodoviária</li>
+                    <li>
+                        <a href="https://maps.app.goo.gl/drtwyCgQq4GimYsn8" target="_blank" style="color: var(--verde-folha);">
+                            <i class="fas fa-directions"></i> Ver no Google Maps
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
-    </footer>
-
+        <div class="copyright">
+            <p>&copy; 2023 IZAplantas - Todos os direitos reservados</p>
+        </div>
+    </div>
+</footer>
     <!-- Carrinho de Compras -->
     <div class="cart-overlay" id="cartOverlay">
         <div class="cart-sidebar">
