--- a/plantas.html
+++ b/plantas.html
@@ -76,6 +76,61 @@
             <!-- Produtos de plantas serão carregados aqui -->
         </div>
     </section>
+    <footer>
+    <div class="container">
+        <div class="footer-content">
+            <div class="footer-column">
+                <h3>IZAplantas</h3>
+                <p>Transformando ambientes com a beleza da natureza</p>
+                <div class="social-links">
+                    <a href="https://www.instagram.com/jardin.iza?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="https://wa.me/5573999535407" target="_blank">
+                        <i class="fab fa-whatsapp"></i>
+                    </a>
+                    <a href="https://maps.app.goo.gl/drtwyCgQq4GimYsn8" target="_blank">
+                        <i class="fas fa-map-marker-alt"></i>
+                    </a>
+                </div>
+            </div>
+            <div class="footer-column">
+                <h3>Links Rápidos</h3>
+                <ul>
+                    <li><a href="index.html">Início</a></li>
+                    <li><a href="plantas.html">Plantas</a></li>
+                    <li><a href="vasos.html">Vasos</a></li>
+                    <li><a href="acessorios.html">Acessórios</a></li>
+                    <li><a href="decoracao.html">Decoração</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h3>Horário de Funcionamento</h3>
+                <ul>
+                    <li>Segunda a Sexta: 8h às 17h</li>
+                    <li>Sábado: 8h às 12h</li>
+                    <li>Domingo: Fechado</li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h3>Localização</h3>
+                <ul>
+                    <li><i class="fas fa-map-marker-alt"></i> Vila Marambaia KM6</li>
+                    <li>CEP: 45530-000</li>
+                    <li>Atrás do Posto da Polícia Rodoviária</li>
+                    <li>
+                        <a href="https://maps.app.goo.gl/drtwyCgQq4GimYsn8" target="_blank" style="color: var(--verde-folha);">
+                            <i class="fas fa-directions"></i> Ver no Google Maps
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="copyright">
+            <p>&copy; 2023 IZAplantas - Todos os direitos reservados</p>
+        </div>
+    </div>
+</footer>
 
     <!-- Incluir os mesmos footer e carrinho do index.html -->
     <script src="js/produtos.js"></script>
