Fix HTML encoding issues in plantas.html

--- a/plantas.html
+++ b/plantas.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plantas - IZAplantas</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -133,9 +133,9 @@
 </footer>
 
     <!-- Incluir os mesmos footer e carrinho do index.html -->
-    <script src="js/produtos.js"></script>
-    <script src="js/carrinho.js"></script>
-    <script src="js/main.js"></script>
+    <script src="produtos.js"></script>
+    <script src="carrinho.js"></script>
+    <script src="main.js"></script>
     <script>
         // Filtros específicos para plantas
         document.addEventListener('DOMContentLoaded', function() {
@@ -157,4 +157,5 @@
         }
     </script>
 </body>
+
 </html>
