--- a/index.html
+++ b/index.html
@@ -191,9 +191,10 @@
         </div>
     </div>
 
-    <script src="js/produtos.js"></script>
-    <script src="js/carrinho.js"></script>
-    <script src="js/main.js"></script>
+    <script src="produtos.js"></script>
+    <script src="carrinho.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
+
