--- a/decoracao.html
+++ b/decoracao.html
@@ -154,9 +154,9 @@
         </div>
     </div>
 
-    <script src="js/produtos.js"></script>
-    <script src="js/carrinho.js"></script>
-    <script src="js/main.js"></script>
+    <script src="produtos.js"></script>
+    <script src="carrinho.js"></script>
+    <script src="main.js"></script>
     <script>
         // Filtros específicos para decoração
         document.addEventListener('DOMContentLoaded', function() {
@@ -292,3 +292,4 @@
 </body>
 
 </html>
+
