--- a/acessorios.html
+++ b/acessorios.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acessórios - IZAplantas</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -155,9 +155,9 @@
         </div>
     </div>
 
-    <script src="js/produtos.js"></script>
-    <script src="js/carrinho.js"></script>
-    <script src="js/main.js"></script>
+    <script src="produtos.js"></script>
+    <script src="carrinho.js"></script>
+    <script src="main.js"></script>
     <script>
         // Filtros específicos para acessórios
         document.addEventListener('DOMContentLoaded', function() {
@@ -291,4 +291,5 @@
         }
     </script>
 </body>
+
 </html>
