--- a/cadastro-produtos.html
+++ b/cadastro-produtos.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Produtos - IZAplantas Admin</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -159,9 +159,10 @@
             <div id="formMessage" style="margin-top: 20px;"></div>
         </div>
     </section>
-<script src="../image-upload.js"></script>
-<script src="../admin.js"></script>
-    <script src="../admin.js"></script>
+<script src="image-upload.js"></script>
+<script src="admin.js"></script>
+    <script src="admin.js"></script>
 </body>
 
 </html>
+
