--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IZAplantas - Floricultura & Jardinagem</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Header -->
@@ -191,8 +191,8 @@
         </div>
     </div>
 
-    <script src="js/produtos.js"></script>
-    <script src="js/carrinho.js"></script>
-    <script src="js/main.js"></script>
+    <script src=" produtos.js"></script>
+    <script src="carrinho.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
