--- a/estque.html
+++ b/estque.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estoque - IZAplantas Admin</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -81,6 +81,6 @@
         </div>
     </section>
 
-    <script src="../js/admin.js"></script>
+    <script src="admin.js"></script>
 </body>
 </html>
