--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IZAplantas - Floricultura & Jardinagem</title>
+    <title>IZAplantas - Floricultura & Jardinagem</title>
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -23,7 +24,7 @@
                         <li><a href="vasos.html">Vasos</a></li>
                         <li><a href="acessorios.html">Acessórios</a></li>
                         <li><a href="decoracao.html">Decoração</a></li>
-                        <li><a href="admin/cadastro-produtos.html" class="admin-link">Admin</a></li>
+                        <li><a href="cadastro-produtos.html" class="admin-link">Admin</a></li>
                     </ul>
                 </nav>
                 <div class="cart-icon" id="cartIcon">
@@ -196,4 +197,5 @@
 </body>
 
 </html>
+
 
