Fix HTML structure and ensure all elements are present
Corrected HTML structure and ensured all necessary elements are present for proper rendering.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <li><a href="vasos.html">Vasos</a></li>
                         <li><a href="acessorios.html">Acessórios</a></li>
                         <li><a href="decoracao.html">Decoração</a></li>
-                        <li><a href="admin/cadastro-produtos.html" class="admin-link">Admin</a></li>
+                        <li><a href="cadastro-produtos.html" class="admin-link">Admin</a></li>
                     </ul>
                 </nav>
                 <div class="cart-icon" id="cartIcon">
@@ -195,4 +195,5 @@
     <script src="carrinho.js"></script>
     <script src="main.js"></script>
 </body>
+
 </html>
